--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,90 @@
-.App {
+.header {
+  background: rgb(104,92,217);
+  background: rgb(251,208,63);
+  background: radial-gradient(circle, rgba(251,208,63,1) 0%, rgba(245,210,74,0.9248074229691877) 0%, rgba(144,242,240,0.9192051820728291) 100%);
+  color: #4158D0;
+  padding: 10px;
   text-align: center;
+  
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background: rgb(34,193,195);
+  background: linear-gradient(180deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.gameboard {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-gap: 10px;
+  padding: 20px;
+  max-width:650px;
+  margin: 0 auto;
+  
+}
+.flip-card {
+  border-radius: 20%;
+  background-color: transparent;
+  width: 100px;
+  height: 100px;
+  border: #4158D0 1px solid;
+  
+} 
+
+.flip-card-inner {
+  border-radius: 20%;
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  border: #4158D0 1px solid;
+  transition: transform 0.5s;
+  transform-style: preserve-3d;
+} 
+
+.flip-card-inner.flipped {
+  border-radius: 20%;
+  transform: rotateY(180deg);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.flip-card-front, .flip-card-back {
+  border-radius: 20%;
+  position: absolute;
+  width: 100px;
+  height: 100px; 
+  backface-visibility: hidden;
+  
+} 
+
+/* .flip-card-front {
+  border-radius: 20%;
+  border: #4158D0 1px solid;
+  overflow: hidden;
+  
+}
+.flip-card-back {
+  border-radius: 20%;
+  width: 100px;
+  height: 100px;
+  border: #4158D0 1px solid;
+  transform: rotateY(180deg);
+
+} */
+
+
+.counter {
+  width: 150px; 
+  height: 80px; 
+  text-align: center;
+  font-size: 15px;
+  color: #4158D0;
+  background: rgb(245,151,36);
+  background: radial-gradient(circle, rgba(245,151,36,0.9528186274509804) 0%, rgba(245,151,36,0.9304096638655462) 0%, rgba(246,216,133,0.9192051820728291) 100%);
+  border: #4158D0 2px solid;
+  padding: 10px;
+  position: absolute;
+  top: 50%;
+  left: 60px;
+  transform: translateY(-10%);
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
